--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
      "target": "ES2020",
      "module": "CommonJS",
      "strict": false,
-       "esModuleInterop": true,
+      "esModuleInterop": true,
      "emitDecoratorMetadata": true,
      "experimentalDecorators": true,
        "skipLibCheck": true,
      "outDir": "./dist"
    },
-   "include": ["src/**/*.ts"],
+   "include": ["src/**/*.ts", "src/index.ts"],
    "exclude": ["node_modules"]
  }
